css fixed so buttons are aligned

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -39,14 +39,29 @@
 
 /* FOR CARD COMPONENT */
 .character {
-  width: 100px;
-  height: 100px;
-  position: center;
-  margin: auto;
+  width: 150px;
+  height: 150px;
 }
 
 .card {
-  background-color: lightblue;
-  margin: 10px;
+  background-color:#02a8e8;
+ padding: 10px;
   width: 200px;
+  font-size: 12px;
+  color: gray;
+  border-width: thick;
+  text-align: center;
+  border: black;
+  border-width: thick;
+  margin: 10px;
+  float: left;
+
+}
+
+#character-name {
+  background: white;
+}
+
+.btn-group {
+  
 }
